--- a/app/src/main/res/layout/activity_base_tab.xml
+++ b/app/src/main/res/layout/activity_base_tab.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.benyuan.xiaojs.ui.widget.LazyViewPager
-        android:id="@+id/tab_fragment_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/tab_menu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/px10"
-        android:paddingTop="@dimen/px10" />
-</merge>
+            android:id="@+id/tab_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/px10"
+            android:paddingTop="@dimen/px10"/>
+
+    <com.benyuan.xiaojs.ui.widget.LazyViewPager
+            android:id="@+id/tab_fragment_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/tab_menu"/>
+
+    <RelativeLayout
+            android:id="@+id/tab_cover"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/tab_menu"
+            android:visibility="gone"
+            android:background="@color/translucent_50">
+
+    </RelativeLayout>
+
+    <com.benyuan.xiaojs.ui.widget.GooeyMenu
+            android:id="@+id/gooey_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/px30"/>
+
+</RelativeLayout>
