--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/header_color"
+            android:background="@color/main_orange"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/px20"
             android:paddingTop="@dimen/px20">
