--- a/app/src/main/res/layout/layout_my_course_search.xml
+++ b/app/src/main/res/layout/layout_my_course_search.xml
@@ -7,12 +7,13 @@
         android:background="@color/white"
         android:layout_height="wrap_content">
 
-    <EditText
+    <TextView
             android:id="@+id/my_course_search"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:drawableLeft="@mipmap/mine_normal"
             android:hint="123"
+            android:gravity="center_vertical"
             android:background="@drawable/common_edittext_bg"
             android:paddingBottom="@dimen/px15"
             android:paddingTop="@dimen/px15"
@@ -20,5 +21,13 @@
             android:layout_marginBottom="@dimen/px30"
             android:layout_marginLeft="@dimen/px50"
             android:layout_marginRight="@dimen/px50"
+            android:layout_height="wrap_content"/>
+
+    <TextView
+            android:id="@+id/course_filter"
+            android:text="@string/filter"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="@dimen/px50"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </LinearLayout>
