--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,27 +46,10 @@
                 android:visibility="invisible"/>
     </LinearLayout>
 
-    <ScrollView
-            android:layout_below="@+id/title"
+    <com.handmark.pulltorefresh.AutoPullToRefreshListView
+            android:id="@+id/home_list"
+            android:layout_below="@id/title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-            <com.benyuan.xiaojs.ui.widget.banner.BannerView
-                    android:id="@+id/home_banner"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/px350"/>
-
-            <com.benyuan.xiaojs.ui.widget.function.FunctionArea
-                    android:id="@+id/home_function_area"
-                    android:layout_marginTop="@dimen/px30"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </ScrollView>
+            android:layout_height="match_parent"/>
 
 </RelativeLayout>
