--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="ability_item_width">80dp</dimen>
+    <dimen name="ability_item_height">50dp</dimen>
+    <dimen name="ability_item_margin">2dp</dimen>
 
     <dimen name="px1">0.5dp</dimen>
     <dimen name="px2">1.0dp</dimen>
