--- a/app/src/main/res/layout/layout_course_filter.xml
+++ b/app/src/main/res/layout/layout_course_filter.xml
@@ -7,18 +7,18 @@
 
     <TextView
             android:text="@string/time"
-            android:layout_marginTop="@dimen/px30"
+            android:layout_marginTop="@dimen/px80"
             android:layout_marginLeft="@dimen/px30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <com.benyuan.xiaojs.ui.widget.AdapterGirdView
             android:id="@+id/course_filter_time_grid"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_marginRight="@dimen/px30"
-            android:horizontalSpacing="@dimen/px5"
-            android:verticalSpacing="@dimen/px5"
-            android:layout_marginTop="@dimen/px30"
+            android:layout_marginLeft="@dimen/px40"
+            android:layout_marginRight="@dimen/px40"
+            android:horizontalSpacing="@dimen/px6"
+            android:verticalSpacing="@dimen/px6"
+            android:layout_marginTop="@dimen/px40"
             android:listSelector="@android:color/transparent"
             android:numColumns="4"
             android:layout_width="match_parent"
@@ -26,19 +26,19 @@
 
     <TextView
             android:text="@string/course_state"
-            android:layout_marginTop="@dimen/px30"
-            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginTop="@dimen/px40"
+            android:layout_marginLeft="@dimen/px40"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <com.benyuan.xiaojs.ui.widget.AdapterGirdView
             android:id="@+id/course_filter_state_grid"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_marginRight="@dimen/px30"
-            android:layout_marginTop="@dimen/px30"
+            android:layout_marginLeft="@dimen/px40"
+            android:layout_marginRight="@dimen/px40"
+            android:layout_marginTop="@dimen/px40"
             android:numColumns="4"
-            android:horizontalSpacing="@dimen/px5"
-            android:verticalSpacing="@dimen/px5"
+            android:horizontalSpacing="@dimen/px6"
+            android:verticalSpacing="@dimen/px6"
             android:listSelector="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -51,8 +51,10 @@
             android:paddingBottom="@dimen/px30"
             android:paddingTop="@dimen/px30"
             android:text="@string/ok"
-            android:layout_marginRight="@dimen/px30"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_marginTop="@dimen/px50"
-            android:layout_marginBottom="@dimen/px50"/>
+            android:textSize="@dimen/font_30px"
+            android:textColor="@color/white"
+            android:layout_marginRight="@dimen/px40"
+            android:layout_marginLeft="@dimen/px40"
+            android:layout_marginTop="@dimen/px90"
+            android:layout_marginBottom="@dimen/px75"/>
 </LinearLayout>
