--- a/app/src/main/res/drawable/common_edittext_bg.xml
+++ b/app/src/main/res/drawable/common_edittext_bg.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-            android:color="@color/clicked_grey_light"
+            android:color="@color/search_stroke"
             android:width="@dimen/px1"/>
     <solid android:color="@color/white"/>
+    <corners android:radius="@dimen/px5"/>
 </shape>
