--- a/app/src/main/res/layout/activity_my_course.xml
+++ b/app/src/main/res/layout/activity_my_course.xml
@@ -8,66 +8,76 @@
         android:layout_height="wrap_content">
 
     <LinearLayout
-            android:id="@+id/my_course_tab"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView
-                android:id="@+id/course_learn"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingTop="@dimen/px30"
-                android:paddingBottom="@dimen/px30"
-                android:text="@string/course_of_teach"
-                android:layout_height="wrap_content"/>
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <LinearLayout
+                    android:id="@+id/my_course_tab"
+                    android:orientation="horizontal"
+                    android:background="@color/white"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                <TextView
+                        android:id="@+id/course_learn"
+                        android:layout_width="wrap_content"
+                        android:gravity="center"
+                        android:paddingTop="@dimen/px30"
+                        android:paddingBottom="@dimen/px30"
+                        android:text="@string/course_of_teach"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/course_teach"
+                        android:layout_width="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginLeft="@dimen/px124"
+                        android:paddingTop="@dimen/px30"
+                        android:paddingBottom="@dimen/px30"
+                        android:text="@string/course_of_learn"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_below="@id/my_course_tab"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <View
+                        android:id="@+id/course_learn_line"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/px220"
+                        android:layout_marginRight="@dimen/px62"
+                        android:visibility="visible"
+                        android:background="@color/main_orange"
+                        android:layout_height="@dimen/px4"/>
+
+                <View
+                        android:id="@+id/course_teach_line"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/px62"
+                        android:layout_marginRight="@dimen/px220"
+                        android:background="@color/main_orange"
+                        android:visibility="visible"
+                        android:layout_height="@dimen/px4"/>
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <View
-                android:background="@color/clicked_grey_light"
-                android:layout_marginTop="@dimen/px10"
-                android:layout_marginBottom="@dimen/px10"
-                android:layout_width="@dimen/px1"
-                android:layout_height="match_parent"/>
-
-        <TextView
-                android:id="@+id/course_teach"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingTop="@dimen/px30"
-                android:paddingBottom="@dimen/px30"
-                android:text="@string/course_of_learn"
-                android:layout_height="wrap_content"/>
+                style="@style/DividerHorizontal2"/>
     </LinearLayout>
 
-    <LinearLayout
-
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <View
-                android:id="@+id/course_learn_line"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
-                android:visibility="invisible"
-                android:background="@color/main_orange"
-                android:layout_height="@dimen/px5"/>
-
-        <View
-                android:id="@+id/course_teach_line"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
-                android:background="@color/main_orange"
-                android:visibility="invisible"
-                android:layout_height="@dimen/px5"/>
-    </LinearLayout>
 
     <RelativeLayout
             android:layout_width="match_parent"
@@ -81,14 +91,9 @@
         <LinearLayout
                 android:id="@+id/hover"
                 android:orientation="vertical"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-            <View
-                    android:background="@color/clicked_grey_light"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/px10"/>
 
             <LinearLayout
                     android:orientation="horizontal"
@@ -100,27 +105,37 @@
                         android:id="@+id/my_course_search"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        android:drawableLeft="@mipmap/mine_normal"
-                        android:hint="123"
+                        android:drawableLeft="@drawable/ic_search"
+                        android:paddingLeft="@dimen/px10"
+                        android:text="@string/name_of_course"
+                        android:textColor="@color/search_gray"
+                        android:textSize="@dimen/font_28px"
+                        android:drawablePadding="@dimen/px10"
                         android:gravity="center_vertical"
                         android:background="@drawable/common_edittext_bg"
                         android:paddingBottom="@dimen/px15"
                         android:paddingTop="@dimen/px15"
-                        android:layout_marginTop="@dimen/px30"
-                        android:layout_marginBottom="@dimen/px30"
-                        android:layout_marginLeft="@dimen/px50"
-                        android:layout_marginRight="@dimen/px50"
+                        android:layout_marginTop="@dimen/px15"
+                        android:layout_marginBottom="@dimen/px15"
+                        android:layout_marginLeft="@dimen/px30"
+                        android:layout_marginRight="@dimen/px20"
                         android:layout_height="wrap_content"/>
 
                 <TextView
                         android:id="@+id/course_filter"
                         android:text="@string/filter"
+                        android:textColor="@color/search_gray"
+                        android:textSize="@dimen/font_28px"
+                        android:drawableRight="@drawable/ic_filter_down"
+                        android:drawablePadding="@dimen/px10"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginRight="@dimen/px50"
+                        android:layout_marginRight="@dimen/px30"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
             </LinearLayout>
 
+            <View
+                    style="@style/DividerHorizontal2"/>
         </LinearLayout>
 
 
