--- a/app/src/main/res/layout/common_popup_menu.xml
+++ b/app/src/main/res/layout/common_popup_menu.xml
@@ -3,7 +3,7 @@
     android:id="@+id/popup_view_content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@mipmap/popup_menu_bg"
+    android:background="@drawable/popup_menu_bg"
     android:orientation="vertical"
     android:paddingBottom="@dimen/px5"
     android:paddingLeft="@dimen/px26"
