--- a/app/src/main/res/layout/layout_base_header.xml
+++ b/app/src/main/res/layout/layout_base_header.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="wrap_content"
+             android:layout_height="@dimen/px88"
              android:background="@color/white"
-             android:orientation="horizontal"
-             android:paddingBottom="@dimen/px20"
-             android:paddingTop="@dimen/px20">
+             android:orientation="horizontal">
 
     <TextView
             android:id="@+id/left_view"
@@ -26,8 +24,10 @@
             android:id="@+id/middle_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/font_34px"
+            android:textStyle="bold"
             android:layout_gravity="center"
-            android:textColor="@color/font_black"/>
+            android:textColor="@color/def"/>
 
     <TextView
             android:id="@+id/right_view"
