--- a/app/src/main/res/layout/layout_my_course_search.xml
+++ b/app/src/main/res/layout/layout_my_course_search.xml
@@ -1,33 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/course_search_wrapper"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/white"
+              android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/my_course_search"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:drawableLeft="@mipmap/mine_normal"
-            android:hint="123"
-            android:gravity="center_vertical"
-            android:background="@drawable/common_edittext_bg"
-            android:paddingBottom="@dimen/px15"
-            android:paddingTop="@dimen/px15"
-            android:layout_marginTop="@dimen/px30"
-            android:layout_marginBottom="@dimen/px30"
-            android:layout_marginLeft="@dimen/px50"
-            android:layout_marginRight="@dimen/px50"
-            android:layout_height="wrap_content"/>
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/course_search_wrapper"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-            android:id="@+id/course_filter"
-            android:text="@string/filter"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="@dimen/px50"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/my_course_search"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_search"
+                android:paddingLeft="@dimen/px10"
+                android:text="@string/name_of_course"
+                android:textColor="@color/search_gray"
+                android:textSize="@dimen/font_28px"
+                android:drawablePadding="@dimen/px10"
+                android:gravity="center_vertical"
+                android:background="@drawable/common_edittext_bg"
+                android:paddingBottom="@dimen/px15"
+                android:paddingTop="@dimen/px15"
+                android:layout_marginTop="@dimen/px15"
+                android:layout_marginBottom="@dimen/px15"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_marginRight="@dimen/px20"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:id="@+id/course_filter"
+                android:text="@string/filter"
+                android:textColor="@color/search_gray"
+                android:textSize="@dimen/font_28px"
+                android:drawableRight="@drawable/ic_filter_down"
+                android:drawablePadding="@dimen/px10"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/px30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+
 </LinearLayout>
