--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="disable_btn">#999999</color>
     <!--horizontal divide line-->
     <color name="hor_divide_line">#d1d5db</color>
+    <color name="hor_divide_line2">#d1d5db</color>
     <!--vertical divide line-->
     <color name="ver_divide_line">#d1d5db</color>
     <color name="link_hover">#0076ff</color>
@@ -40,8 +41,10 @@
     <color name="totally_red_font">#ff0000</color>
     <color name="clicked_grey_light">#d7d7db</color> <!-- 用于浅灰按钮hover -->
 
+    <color name="search_stroke">#d4d7dd</color>
     <color name="common_list_line">#33ffffff</color>
     <color name="common_btn_white_text">#ffffffff</color>
     <color name="common_btn_white_text_press">#88ffffff</color>
     <color name="translucent_50">#7d000000</color>
+    <color name="search_gray">#bfbfbf</color>
 </resources>
