--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/px1</item>
     </style>
+    <style name="DividerHorizontal2">
+        <item name="android:background">@color/hor_divide_line2</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/px1</item>
+    </style>
     <style name="DividerVertical">
         <item name="android:background">@color/ver_divide_line</item>
         <item name="android:layout_width">@dimen/px1</item>
