我的课的资源和界面优化

--- a/app/src/main/res/drawable/common_light_stroke.xml
+++ b/app/src/main/res/drawable/common_light_stroke.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white"/>
     <stroke
-            android:color="@color/clicked_grey_light"
+            android:color="@color/main_orange"
             android:width="@dimen/px1"/>
 </shape>
