--- a/app/src/main/res/layout/activity_my_course_search.xml
+++ b/app/src/main/res/layout/activity_my_course_search.xml
@@ -8,10 +8,8 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/main_orange"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/px20"
-            android:paddingTop="@dimen/px20">
+            android:background="@color/white"
+            android:orientation="horizontal">
 
         <ImageView
                 android:id="@+id/back"
@@ -22,23 +20,23 @@
                 android:visibility="visible"
                 android:layout_gravity="center_vertical"/>
 
-        <FrameLayout
-                android:background="@color/white"
+        <EditText
+                android:id="@+id/my_course_search"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_search"
+                android:paddingLeft="@dimen/px10"
+                android:hint="@string/name_of_course"
+                android:textSize="@dimen/font_28px"
+                android:drawablePadding="@dimen/px10"
+                android:gravity="center_vertical"
+                android:background="@drawable/common_edittext_bg"
+                android:paddingBottom="@dimen/px15"
+                android:paddingTop="@dimen/px15"
+                android:layout_marginTop="@dimen/px15"
+                android:layout_marginBottom="@dimen/px15"
                 android:layout_marginLeft="@dimen/px30"
-                android:layout_height="wrap_content">
-
-            <EditText
-                    android:id="@+id/my_course_search"
-                    android:layout_width="match_parent"
-                    android:drawableLeft="@mipmap/mine_normal"
-                    android:hint="123"
-                    android:background="@drawable/common_edittext_bg"
-                    android:paddingBottom="@dimen/px15"
-                    android:paddingTop="@dimen/px15"
-                    android:layout_height="wrap_content"/>
-        </FrameLayout>
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/my_course_search_ok"
@@ -47,10 +45,16 @@
                 android:layout_marginLeft="@dimen/px30"
                 android:layout_marginRight="@dimen/px30"
                 android:layout_gravity="center_vertical"
-                android:textColor="@color/white"
-                android:text="@string/ok"/>
+                android:textColor="@drawable/orange_click_text_selector"
+                android:text="@string/search"/>
 
     </LinearLayout>
+
+    <View
+            android:id="@+id/divider"
+            android:layout_below="@id/title"
+            style="@style/DividerHorizontal2"/>
+
 
     <com.handmark.pulltorefresh.AutoPullToRefreshListView
             android:id="@+id/my_course_search_list"
@@ -60,5 +64,5 @@
             android:divider="@color/clicked_grey_light"
             android:dividerHeight="@dimen/px10"
             android:orientation="vertical"
-            android:layout_below="@id/title"/>
+            android:layout_below="@id/divider"/>
 </RelativeLayout>
