--- a/app/src/main/res/layout/layout_course_filter_item.xml
+++ b/app/src/main/res/layout/layout_course_filter_item.xml
@@ -2,10 +2,11 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:paddingTop="@dimen/px20"
-          android:paddingBottom="@dimen/px20"
-          android:textColor="@color/clicked_grey_light"
-          android:background="@drawable/rect_line_bg"
+          android:paddingTop="@dimen/px35"
+          android:paddingBottom="@dimen/px35"
+          android:textSize="@dimen/font_28px"
+          android:textColor="@color/common_text"
+          android:background="@drawable/common_grey_stroke"
           android:gravity="center">
 
 </TextView>
