--- a/app/src/main/res/layout/layout_my_course.xml
+++ b/app/src/main/res/layout/layout_my_course.xml
@@ -13,48 +13,68 @@
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/px30">
+                android:layout_marginTop="@dimen/px26"
+                android:layout_marginLeft="@dimen/px24"
+                android:layout_marginRight="@dimen/px24"
+                android:layout_marginBottom="@dimen/px36">
 
             <FrameLayout
                     android:id="@+id/image"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true">
 
                 <ImageView
                         android:id="@+id/course_item_image"
-                        android:layout_width="@dimen/px120"
-                        android:layout_height="@dimen/px120"
+                        android:layout_width="@dimen/px260"
+                        android:layout_height="@dimen/px147"
                         android:src="@mipmap/t_four"
                         android:scaleType="fitXY"/>
 
-                <ImageView
+                <TextView
                         android:id="@+id/course_xbs_state"
                         android:layout_gravity="bottom"
-                        android:layout_width="wrap_content"
+                        android:paddingTop="@dimen/px10"
+                        android:paddingBottom="@dimen/px10"
+                        android:visibility="gone"
+                        android:background="@color/translucent_50"
+                        android:textSize="@dimen/font_22px"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
             </FrameLayout>
 
             <LinearLayout
                     android:layout_toRightOf="@id/image"
-                    android:layout_marginLeft="@dimen/px30"
-                    android:layout_marginRight="@dimen/px30"
+                    android:layout_marginLeft="@dimen/px24"
                     android:orientation="vertical"
+                    android:layout_centerInParent="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                 <TextView
                         android:id="@+id/course_name"
+                        android:textSize="@dimen/font_34px"
+                        android:textColor="@color/font_black"
+                        android:maxLines="1"
+                        android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
                 <RelativeLayout
-                        android:layout_width="wrap_content"
+                        android:layout_marginTop="@dimen/px14"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                     <TextView
                             android:id="@+id/time_mark"
                             android:layout_alignParentLeft="true"
                             android:layout_centerInParent="true"
+                            android:textSize="@dimen/font_26px"
+                            android:maxLines="1"
+                            android:textColor="@color/common_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
 
@@ -64,45 +84,42 @@
                             android:layout_centerInParent="true"
                             android:layout_toRightOf="@id/time_mark"
                             android:layout_marginLeft="@dimen/px30"
+                            android:textSize="@dimen/font_26px"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                 </RelativeLayout>
 
-                <TextView
-                        android:id="@+id/course_desc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                <RelativeLayout
+                        android:layout_marginTop="@dimen/px28"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <TextView
+                            android:id="@+id/course_desc"
+                            android:drawablePadding="@dimen/px14"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerInParent="true"
+                            android:textSize="@dimen/font_26px"
+                            android:maxLines="1"
+                            android:textColor="@color/common_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:id="@+id/course_price"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerInParent="true"
+                            android:layout_toRightOf="@id/course_desc"
+                            android:layout_marginLeft="@dimen/px30"
+                            android:textSize="@dimen/font_26px"
+                            android:textColor="@color/red"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
-
-    <RelativeLayout
-            android:id="@+id/teach_fun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/px20"
-            android:layout_marginTop="@dimen/px20">
-
-        <TextView
-                android:id="@+id/course_focus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"/>
-
-        <TextView
-                android:id="@+id/course_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/course_focus"
-                android:layout_marginRight="@dimen/px30"/>
-
-        <TextView
-                android:id="@+id/course_stu_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/course_share"
-                android:layout_marginRight="@dimen/px30"/>
-    </RelativeLayout>
 
     <View
             android:layout_width="match_parent"
@@ -122,10 +139,10 @@
 
             <com.benyuan.xiaojs.ui.widget.RedTipTextView
                     android:id="@+id/course_opera_1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:gravity="center"
-                    android:paddingTop="@dimen/px15"
-                    android:paddingBottom="@dimen/px15"
+                    android:paddingBottom="@dimen/px20"
+                    android:paddingTop="@dimen/px20"
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
@@ -139,10 +156,10 @@
 
             <com.benyuan.xiaojs.ui.widget.RedTipTextView
                     android:id="@+id/course_opera_2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:gravity="center"
-                    android:paddingTop="@dimen/px15"
-                    android:paddingBottom="@dimen/px15"
+                    android:paddingBottom="@dimen/px20"
+                    android:paddingTop="@dimen/px20"
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
@@ -155,10 +172,10 @@
 
             <com.benyuan.xiaojs.ui.widget.RedTipTextView
                     android:id="@+id/course_opera_3"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:gravity="center"
-                    android:paddingTop="@dimen/px15"
-                    android:paddingBottom="@dimen/px15"
+                    android:paddingBottom="@dimen/px20"
+                    android:paddingTop="@dimen/px20"
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
@@ -171,11 +188,11 @@
 
             <com.benyuan.xiaojs.ui.widget.RedTipTextView
                     android:id="@+id/course_opera_4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:gravity="center"
-                    android:paddingTop="@dimen/px15"
-                    android:paddingBottom="@dimen/px15"
                     android:layout_gravity="center"
+                    android:paddingBottom="@dimen/px20"
+                    android:paddingTop="@dimen/px20"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
 
