--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <!--horizontal divide line-->
     <color name="hor_divide_line">#d1d5db</color>
     <color name="hor_divide_line2">#d1d5db</color>
+    <color name="stroke_common">#e9e9e9</color>
     <!--vertical divide line-->
     <color name="ver_divide_line">#d1d5db</color>
     <color name="link_hover">#0076ff</color>
@@ -47,4 +48,8 @@
     <color name="common_btn_white_text_press">#88ffffff</color>
     <color name="translucent_50">#7d000000</color>
     <color name="search_gray">#bfbfbf</color>
+    <color name="common_text">#8a8a8a</color>
+    <color name="course_state_on">#698700</color>
+    <color name="course_state_cancel">#e2e1e1</color>
+    <color name="course_state_end">#cacaca</color>
 </resources>
