--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,53 +3,62 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <com.handmark.pulltorefresh.AutoPullToRefreshListView
+            android:id="@+id/home_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
     <LinearLayout
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/main_orange"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/px20"
-            android:paddingTop="@dimen/px20">
+            android:background="@color/translucent_30"
+            android:orientation="horizontal">
 
         <ImageView
                 android:id="@+id/left_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/mine_normal"
+                android:src="@drawable/home_message_selector"
+                android:layout_marginRight="@dimen/px30"
+                android:layout_marginLeft="@dimen/px30"
                 android:visibility="invisible"
                 android:layout_gravity="center_vertical"/>
 
         <RelativeLayout
-                android:id="@+id/home_search"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:background="@color/white"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center">
+                android:background="@drawable/common_edittext_bg"
+                android:paddingBottom="@dimen/px20"
+                android:paddingTop="@dimen/px20"
+                android:layout_marginTop="@dimen/px20"
+                android:layout_marginBottom="@dimen/px20"
+                android:layout_height="wrap_content">
 
             <TextView
-                    android:text="@string/home_search_hint"
-                    android:layout_marginLeft="@dimen/px10"
-                    android:paddingBottom="@dimen/px20"
-                    android:paddingTop="@dimen/px20"
+                    android:id="@+id/my_course_search"
                     android:layout_width="wrap_content"
+                    android:drawableLeft="@drawable/ic_search"
+                    android:layout_centerInParent="true"
+                    android:text="@string/home_search_hint"
+                    android:textColor="@color/search_gray"
+                    android:textSize="@dimen/font_28px"
+                    android:drawablePadding="@dimen/px10"
+                    android:gravity="center"
                     android:layout_height="wrap_content"/>
         </RelativeLayout>
+
 
         <ImageView
                 android:id="@+id/right_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:src="@mipmap/mine_normal"
-                android:visibility="invisible"/>
+                android:src="@drawable/home_message_selector"
+                android:clickable="true"
+                android:layout_marginRight="@dimen/px30"
+                android:layout_marginLeft="@dimen/px30"
+                android:visibility="visible"/>
     </LinearLayout>
-
-    <com.handmark.pulltorefresh.AutoPullToRefreshListView
-            android:id="@+id/home_list"
-            android:layout_below="@id/title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
 
 </RelativeLayout>
