--- a/app/src/main/res/layout/layout_base_tab_item.xml
+++ b/app/src/main/res/layout/layout_base_tab_item.xml
@@ -6,11 +6,13 @@
 
     <com.benyuan.xiaojs.ui.widget.RedTipTextView
             android:id="@+id/base_tab_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/px20"
+            android:paddingBottom="@dimen/px15"
             android:layout_gravity="center"
             android:gravity="center"
-            android:drawablePadding="@dimen/px5"
-            android:textSize="10sp"
+            android:drawablePadding="@dimen/px10"
+            android:textSize="@dimen/font_22px"
             android:textColor="@drawable/home_tab_text_selector"/>
 </FrameLayout>
